--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
 }
 
 dependencies {
+    //Rx
+    def rx_version = "3.0.9"
+    implementation "io.reactivex.rxjava3:rxjava:$rx_version"
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
