--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleShoppingList">
-        <activity android:name=".presentation.ShoppingListsActivity">
+        <activity android:name=".presentation.shopping_lists.ShoppingListsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".presentation.shopping_list_details.ShoppingListDetailsActivity"/>
     </application>
 
 </manifest>
