--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    // SwipeLayout
+    implementation 'com.github.paullettuce:android-swipe-layout:v1.0.10-alpha'
+
     // LeakCanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 
